# Singularity

./: .gitmodules  CMakeLists.txt  main.cpp  min_windows.h  setup-deps.sh
common/: file.h  file_watcher.cpp  file_watcher.h  stbi_image.cpp
engine/: camera.cpp  camera.h
engine/objects/: gltf.cpp  gltf.h  material.cpp  material.h  meshlets.cpp  meshlets.h  pool.cpp  pool.h  render_object.cpp  render_object.h
graphics/: d3d12_renderer.cpp  d3d12_renderer.h  vk_renderer.cpp  vk_renderer.h
graphics/common/: vk_common.h
graphics/vk/: vk_common.h  vk_descriptor_layout.cpp  vk_descriptor_layout.h  vk_gui.cpp  vk_gui.h  vk_pipeline_builder.cpp  vk_pipeline_builder.h
graphics/vk/memory/: vk_memory.cpp  vk_memory.h  vk_mesh_assets.cpp  vk_mesh_assets.h  vma_usage.h
graphics/vk/radiance_cascades/: radiance_cascades.cpp  radiance_cascades.h  ray_tracing.cpp  ray_tracing.h
graphics/vk/shaders/: depth_prepass.vert  frustum.comp  input_structures.glsl  light_culling.comp  lighting.frag  mesh.frag  mesh.vert  rtmesh.vert  shader.comp  shader.frag  shader.vert  shadowmap.frag  shadowmap.vert  skybox.frag  skybox.vert  tiled_shading.glsl
graphics/vk/shaders/mesh/: meshshader.frag  meshshader.include.glsl  meshshader.mesh  meshshader.task
graphics/vk/shaders/radiance_cascades/: closesthit.rchit  miss.rmiss  raygen.rgen  rtShadow.rmiss  temporalAccumulation.comp
